Fix: Add .npmrc for legacy-peer-deps, secure AI API key handling

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-# Supabase Configuration
+# Supabase Configuration (前端使用)
 VITE_SUPABASE_URL=your_supabase_project_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# AI API Configuration
-VITE_AI_API_URL=your_ai_api_endpoint_here
+# AI API 后端专用 (不带 VITE_ 前缀，前端不可见)
+# 这些变量只在 Cloudflare Workers/Pages Functions 中可用
+LLM_API_KEY=your_deepseek_api_key_here
 
 # Optional: Development Settings
 # VITE_DEBUG_MODE=true
