Feature: Multi-provider AI support (2025.12) - DeepSeek V3.2, Kimi K2, SiliconFlow, etc.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,39 @@
-# Supabase Configuration (前端使用)
-VITE_SUPABASE_URL=your_supabase_project_url_here
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+# ============================================================
+# Grimoire Aether 环境变量配置
+# 2025年12月 最新版
+# ============================================================
 
-# AI API 后端专用 (不带 VITE_ 前缀，前端不可见)
-# 这些变量只在 Cloudflare Workers/Pages Functions 中可用
-LLM_API_KEY=your_deepseek_api_key_here
+# ============================================================
+# 前端变量 (带 VITE_ 前缀)
+# ============================================================
+VITE_SUPABASE_URL=your_supabase_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# Optional: Development Settings
-# VITE_DEBUG_MODE=true
+# ============================================================
+# AI 提供商 API Keys (后端使用，不带 VITE_ 前缀)
+# 只需配置你使用的提供商
+# ============================================================
+
+# DeepSeek - 深度求索 (V3.2 / R1)
+# https://platform.deepseek.com/
+DEEPSEEK_API_KEY=your_deepseek_key
+
+# Kimi - 月之暗面 (K2 Thinking)
+# https://platform.moonshot.cn/
+KIMI_API_KEY=your_kimi_key
+
+# 硅基流动 - SiliconFlow
+# https://cloud.siliconflow.cn/
+SILICONFLOW_API_KEY=your_siliconflow_key
+
+# OpenRouter - 多模型聚合
+# https://openrouter.ai/
+OPENROUTER_API_KEY=your_openrouter_key
+
+# OpenAI (GPT-4o / o1 / o3-mini)
+# https://platform.openai.com/
+OPENAI_API_KEY=your_openai_key
+
+# Anthropic - Claude (Sonnet 4)
+# https://console.anthropic.com/
+ANTHROPIC_API_KEY=your_anthropic_key
