--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,9 +2,18 @@ name = "grimoire-aether"
 compatibility_date = "2024-01-01"
 pages_build_output_dir = "./dist"
 
-# 开发环境变量（仅用于本地测试）
+# ============================================================
+# 开发环境变量说明
+# ============================================================
+# 本地开发时，请创建 .dev.vars 文件配置 API Keys
 # 生产环境请在 Cloudflare Dashboard 配置
-[vars]
-# LLM_API_KEY = "your-key-here"  # 不要在这里放真实 key
-LLM_API_URL = "https://api.deepseek.com"
-LLM_MODEL = "deepseek-chat"
+# 
+# 支持的环境变量：
+# - DEEPSEEK_API_KEY    (DeepSeek)
+# - KIMI_API_KEY        (Kimi / 月之暗面)
+# - SILICONFLOW_API_KEY (硅基流动)
+# - OPENROUTER_API_KEY  (OpenRouter)
+# - OPENAI_API_KEY      (OpenAI)
+# - ANTHROPIC_API_KEY   (Anthropic)
+# - LLM_API_KEY         (旧版兼容，映射到 DeepSeek)
+# ============================================================
