--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-dom": "^19.2.0",
     "react-hotkeys-hook": "^5.2.1",
     "react-konva": "^19.2.1",
+    "react-konva-utils": "^2.0.0",
+    "react-router-dom": "^7.10.1",
     "tailwind-merge": "^3.4.0",
+    "use-image": "^1.1.4",
     "xstate": "^5.24.0",
     "zustand": "^5.0.9"
   },
